--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
     
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
-        const socket = io(`http://${window.location.hostname}:5000`);
+        const socket = io();
         
         function App() {
             const [guestName, setGuestName] = useState('');
